# Record-Management-System

./: CMakeLists.txt  README.md
data/: books.txt
docs/runs/: run_add_display.txt  run_sort_export_dashboard.txt  run_update_search.txt
exports/: books_export.csv
include/models/: Book.h
include/repositories/: BookRepository.h
include/services/: BookService.h
include/ui/: Menu.h
scripts/: build.ps1  render-terminal-screenshot.ps1  run_demo.ps1
src/: main.cpp
src/models/: Book.cpp
src/repositories/: BookRepository.cpp
src/services/: BookService.cpp
src/ui/: Menu.cpp
